--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,85 @@
-.example-parent {
-    border: 2px solid #DFA612;
-    color: black;
-    display: flex;
-    font-family: sans-serif;
-    font-weight: bold;
-  }
+h1 {
+  text-align: center;
+  font-size: 15vh;
+  margin: 0;
+}
+
+body {
+  max-width: 85%;
+  margin: auto;
+  background-color: #f5f0e4;
+}
+
+.container {
+  /* border: 2px solid #DFA612; */
+  height: 100%;  
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+}
+
+.container2 {
+  border: dashed lightgrey;
+  background-color: white;
+  height: 100%;  
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin-top: 5vh;
+}
+
+img{
+  max-width: 25vh;  
+}
+
+img:hover {
+  transform: scale(2);
+  display:block;
+
+}
+
+.box { 
+  display: flex;
+  background-color: white;
+  flex-flow: column;
+  width: 100%;
+  height: 100%;
+  border: double lightgrey ;
+  margin: 1vh;
+}
+
+
+.yes{
+  text-align: center;
+  background-color: green;
+  margin: 1vh;
+  border: ridge;
+}
+
+.no{
+  text-align: center;
+  background-color: red;
+  margin: 1vh;
+  border: ridge;
+}
+
+.origin {
+  flex-basis: 100%;
+  flex-grow: 1;
+  padding: 10px;
+}
   
-  .example-origin {
-    flex-basis: 100%;
-    flex-grow: 1;
-    padding: 10px;
-  }
+.draggable {
+  font-weight: normal;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+}
   
-  .example-draggable {
-    background-color: #4AAE9B;
-    font-weight: normal;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 10px;
-  }
-  
-  .example-dropzone {
-    background-color: #6DB65B;
-    flex-basis: 100%;
-    flex-grow: 1;
-    padding: 10px;
-  }
+.dropzone {
+  flex-basis: 100%;
+  flex-grow: 1;
+  padding: 10px;
+  border: inset .5vh;
+  margin: 1vh;
+}
