--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 h1 {
   text-align: center;
   font-size: 15vh;
-  margin: 0;
+  margin: 2.5vh;
 }
 
 body {
@@ -19,14 +19,14 @@ body {
 }
 
 .container2 {
-  border: dashed lightgrey;
+  border: dashed darkgrey;
   background-color: white;
   width: 90%;  
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
   margin: auto;
   margin-top: 7.5vh;
+  margin-bottom: 25vh;
 }
    
 img{
@@ -43,11 +43,11 @@ img:hover {
 
 .box { 
   display: flex;
-  background-color: white;
+  background-color:#dee0e0;
   flex-flow: column;
   width: 100%;
   height: 100%;
-  border: double lightgrey ;
+  border: double darkgrey ;
   margin: 1vh;
 }
 
@@ -69,6 +69,7 @@ img:hover {
 .origin {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
   flex-basis: 100%;
   flex-grow: 1;
   padding: 10px;
@@ -85,6 +86,7 @@ img:hover {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  background-color: white;
   flex-basis: 100%;
   flex-grow: 1;
   padding: 10px;
